--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.0.2",
     "react-bootstrap-icons": "^1.6.1",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
@@ -35,7 +36,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"node src/StripeApp.js\" ",
+    "start": "concurrently \"react-scripts start\" \"nodemon src/backend/App.js\" ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
