Adding Auth0 based authentication to the application

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:4242",
   "dependencies": {
+    "@auth0/auth0-react": "^1.8.0",
     "@date-io/date-fns": "^2.11.0",
     "@date-io/dayjs": "^2.11.0",
     "@date-io/luxon": "^2.11.1",
@@ -29,6 +30,7 @@
     "react-bootstrap-icons": "^1.6.1",
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "stripe": "^8.193.0",
