--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:4242",
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
+    "@aws-sdk/client-dynamodb": "^3.45.0",
     "@date-io/date-fns": "^2.11.0",
     "@date-io/dayjs": "^2.11.0",
     "@date-io/luxon": "^2.11.1",
@@ -17,13 +18,15 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aws-sdk": "^2.1048.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.1",
     "concurrently": "^6.4.0",
     "cors": "^2.8.5",
+    "dateformat": "^5.0.2",
     "express": "^4.17.1",
-    "formik": "^2.2.9",
     "mui": "^0.0.1",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.0.2",
