--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "product-demo",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:4242",
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
     "@aws-sdk/client-dynamodb": "^3.45.0",
@@ -24,6 +23,7 @@
     "concurrently": "^6.4.0",
     "cors": "^2.8.5",
     "dateformat": "^5.0.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mui": "^0.0.1",
     "normalize.css": "^8.0.1",
@@ -35,13 +35,13 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "stripe": "^8.193.0",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"nodemon src/backend/App.js\" ",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
