--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
-    "@aws-sdk/client-dynamodb": "^3.45.0",
     "@date-io/date-fns": "^2.11.0",
     "@date-io/dayjs": "^2.11.0",
     "@date-io/luxon": "^2.11.1",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.1.1",
-    "@sendgrid/mail": "^7.6.0",
+    "@speechly/react-client": "^1.1.0",
+    "@speechly/react-ui": "^2.3.0",
     "@stripe/react-stripe-js": "^1.7.0",
     "@stripe/stripe-js": "^1.22.0",
     "@testing-library/jest-dom": "^5.15.0",
@@ -19,7 +19,7 @@
     "@testing-library/user-event": "^12.8.3",
     "aws-sdk": "^2.1048.0",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.7.1",
+    "bootstrap-icons": "^1.7.2",
     "concurrently": "^6.4.0",
     "cors": "^2.8.5",
     "dateformat": "^5.0.2",
@@ -33,9 +33,11 @@
     "react-bootstrap-icons": "^1.6.1",
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
+    "react-speech-recognition": "^3.9.0",
     "stripe": "^8.193.0",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
